Updated .gitinore and added environment support via dotenv

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.9.0 # for handling network calls
+  flutter_dotenv: ^6.0.0 # for managing enviroments
 
 dev_dependencies:
   flutter_test:
